[package]
name = "fustc"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.25"
memfile = "0.3.2"
nix = { version = "0.29.0", features = ["process", "fs"] }
serde_json = "1.0.138"
shared_memory = "0.12.4"
simple_logger = { version = "5.0.0", features = ["stderr", "colored"] }
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread", "fs", "io-util"] }

[package.metadata.rust-analyzer]
rustc_private = true

[[bin]]
name = "cargo-fustc_driver"
path = "src/driver.rs"

[[bin]]
name = "fustc"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
