[package]
name = "fustc"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
memfile = "0.3.2"
nix = { version = "0.29.0", features = ["process", "fs"] }
serde_json = "1.0.138"
simple_logger = { version = "5.0.0", features = ["stderr", "colored"] }
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread", "fs", "io-util", "sync", "net", "process"] }
http = "1.3.1"
httparse = "1.10.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies.tikv-jemalloc-sys]
version = "0.6"
features = ['unprefixed_malloc_on_supported_platforms']

[package.metadata.rust-analyzer]
rustc_private = true

[[bin]]
name = "cargo-fustc_driver"
path = "src/driver.rs"

[[bin]]
name = "fustc"
path = "src/main.rs"

[[bin]]
name = "cargo-fustc"
path = "src/bin/cargo-fustc.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
