[package]
name = "cacher"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.25"
serde_json = "1.0.138"
simple_logger = { version = "5.0.0", features = ["stderr", "colored"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread"] }

[dependencies.tikv-jemalloc-sys]
version = "0.6.0"
optional = true
features = ['unprefixed_malloc_on_supported_platforms']

[features]
default = ["jemalloc"]
jemalloc = ['dep:tikv-jemalloc-sys']

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.rust-analyzer]
rustc_private = true
