[package]
name = "fustc"
version = "0.1.0"
edition = "2024"

[dependencies]
fustc-utils = { path = "../fustc-utils" }
log = "0.4.25"
serde_json = "1.0.138"
simple_logger = { version = "5.0.0", features = ["stderr", "colored"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies.tikv-jemalloc-sys]
version = "0.6"
features = ['unprefixed_malloc_on_supported_platforms']

[package.metadata.rust-analyzer]
rustc_private = true
